update theme page  / work on toolbar to complete later
