# back/src/main/java/com/openclassrooms/mddapi/controllers/ThemeController.java
@@ -1,6 +1,7 @@
 package com.openclassrooms.mddapi.controllers;
 
-import com.openclassrooms.mddapi.api.SubscriptionsApi;
+
+import com.openclassrooms.mddapi.api.ThemesApi;
 import com.openclassrooms.mddapi.models.ThemeListResponse;
 import com.openclassrooms.mddapi.services.ThemeServices;
 import org.springframework.http.ResponseEntity;
@@ -8,7 +9,7 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
-public class ThemeController implements SubscriptionsApi {
+public class ThemeController implements ThemesApi {
 
 
     private final ThemeServices themeService;
@@ -18,10 +19,10 @@ public class ThemeController implements SubscriptionsApi {
     }
 
     @GetMapping(
-            value = "/subscriptions",
+            value = "/themes",
             produces = {"application/json"}
     )
-    public ResponseEntity<ThemeListResponse> subscriptionsGet() {
+    public ResponseEntity<ThemeListResponse> themesGet() {
         return ResponseEntity.ok(themeService.getThemeList());
     }
 }
